Removed pagination from getAllProducts to display all products

--- a/frontend/customer.html
+++ b/frontend/customer.html
@@ -15,8 +15,8 @@
 
     <button onclick="loadCustomerDashboard()">🏠 Dashboard</button>
     <button onclick="loadProducts()">📦 View Products</button>
+    <button onclick="viewCart()">🛒 Cart</button>
     <button onclick="loadMyOrders()">🧾 My Orders</button>
-    <button onclick="showOrderForm()">🛒 Place Order</button>
     <button onclick="logout()">🚪 Logout</button>
 </div>
 
